Bug 606650 - Treat typeof() tests as constant in JIT profiler (r=dmandelin)