js/src/jstracer.h
@@ -667,6 +667,7 @@ enum MonitorResult {
 };
 
 const uintN PROFILE_MAX_INNER_LOOPS = 8;
+const uintN PROFILE_MAX_STACK = 6;
 
 /*
  * A loop profile keeps track of the instruction mix of a hot loop. We use this
@@ -737,15 +738,6 @@ public:
      */
     double branchMultiplier;
 
-    /*
-     * Tracks the value of the constant in the most recent INT8 instruction.
-     * This is used to detect for loops with small upper bounds (i.e., short loops).
-     */
-    uintN prevConst;
-    
-    /* Tracks the previous opcode. */
-    JSOp prevOp;
-
     /* Set to true if the loop is short (i.e., has fewer than 8 iterations). */
     bool shortLoop;
 
@@ -777,6 +769,42 @@ public:
     InnerLoop loopStack[PROFILE_MAX_INNER_LOOPS];
     uintN loopStackDepth;
 
+    /*
+     * These fields keep track of values on the JS stack. If the stack grows larger
+     * than PROFILE_MAX_STACK, we continue to track sp, but we return conservative results
+     * for stackTop().
+     */
+    struct StackValue {
+        bool isConst;
+        bool hasValue;
+        int value;
+
+        StackValue() : isConst(false), hasValue(false) {}
+        StackValue(bool isConst) : isConst(isConst), hasValue(false) {}
+        StackValue(bool isConst, int value) : isConst(isConst), hasValue(true), value(value) {}
+    };
+    StackValue stack[PROFILE_MAX_STACK];
+    uintN sp;
+
+    inline void stackClear() { sp = 0; }
+    
+    inline void stackPush(const StackValue &v) {
+        if (sp < PROFILE_MAX_STACK)
+            stack[sp++] = v;
+        else
+            stackClear();
+    }
+
+    inline void stackPop() { if (sp > 0) sp--; }
+
+    inline StackValue stackAt(int pos) {
+        pos += sp;
+        if (pos >= 0 && uintN(pos) < PROFILE_MAX_STACK)
+            return stack[pos];
+        else
+            return StackValue(false);
+    }
+    
     LoopProfile(JSScript *script, jsbytecode *top, jsbytecode *bottom);
 
     enum ProfileAction {
